added css and fixed thor

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </li>
 
 <li>
-<a href="#lightbox">
+<a href="#lightbox2">
 <div class="sprite" id="thor"></div>
 <h5>Thor</h5>
 </a>
@@ -80,7 +80,7 @@
 <article>
 <h3 class="lb_heading">Captain America - The First Avenger</h3>
 
-<p class="lb_text">
+<p> class="lb_text"
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio distinctio praesentium numquam quo quisquam sit vitae sed possimus animi harum nihil eum, ut rem sint. Omnis id natus asperiores blanditiis!
 </p>
 
